# kloom-litellm-plugin

./: .gitignore  README.md  pyproject.toml
example/: README.md  litellm_local.py
kloom_litellm/: setup.py
kloom_litellm/src/kloom_litellm/: __init__.py  plugin.py
