[project]
name = ""
version = "0.0.1"
requires-python = "~=3.13"
dependencies = [
    "kloom_litellm",
    "litellm>=1.79.3",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "playwright>=1.56.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
kloom_litellm = { path = "kloom_litellm", editable = true }
